Refactored branch status to keep up to sync. fix #489
* Used markers instead of session properties to flag branch status for resources
* Used service to update branch status
* Removed lots of code from Activator

--- a/com.dynamo.cr.editor/plugin.xml
+++ b/com.dynamo.cr.editor/plugin.xml
@@ -353,15 +353,9 @@
             location="BOTTOM_RIGHT"
             state="true">
          <enablement>
-            <and>
-               <objectClass
-                     name="org.eclipse.core.resources.IResource">
-               </objectClass>
-               <objectState
-                     name="sessionProperty"
-                     value="com.dynamo.cr.editor.branchStatus">
-               </objectState>
-            </and>
+            <objectClass
+                  name="org.eclipse.core.resources.IResource">
+            </objectClass>
          </enablement>
       </decorator>
    </extension>
@@ -374,6 +368,25 @@
                type="org.eclipse.core.resources.IResource">
          </adapter>
       </factory>
+   </extension>
+   <extension
+         id="com.dynamo.cr.editor.markers.branchStatus"
+         name="Branch Status"
+         point="org.eclipse.core.resources.markers">
+      <attribute
+            name="com.dynamo.cr.editor.attributes.indexStatus">
+      </attribute>
+      <attribute
+            name="com.dynamo.cr.editor.attributes.workingTreeStatus">
+      </attribute>
+   </extension>
+   <extension
+         point="org.eclipse.ui.services">
+      <serviceFactory
+            factoryClass="com.dynamo.cr.editor.services.ServiceFactory">
+         <service
+               serviceClass="com.dynamo.cr.editor.services.IBranchService"></service>
+      </serviceFactory>
    </extension>
 
 </plugin>
