Set global action handlers using the IEditorActionBarContributor mechanism. setFocus() in IEditorPart is not invoked in all situations. ref #502

--- a/com.dynamo.cr.contenteditor/plugin.xml
+++ b/com.dynamo.cr.contenteditor/plugin.xml
@@ -5,6 +5,7 @@
          point="org.eclipse.ui.editors">
       <editor
             class="com.dynamo.cr.contenteditor.editors.CollectionEditor"
+            contributorClass="com.dynamo.cr.contenteditor.editors.CollectionEditorActionBarContributor"
             default="false"
             extensions="collection"
             icon="icons/bricks.png"
