--- a/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr.common/build.properties
@@ -18,4 +18,5 @@ bin.includes = META-INF/,\
                ext/jackson-core-asl-1.7.1.jar,\
                ext/jackson-mapper-asl-1.7.1.jar,\
                ext/commons-io-2.0.1.jar,\
-               DYNAMO_HOME/share/java/fontc.jar
+               DYNAMO_HOME/share/java/fontc.jar,\
+               ext/vecmath.jar
