Moved property feature from gui to separate plugin and added initial unit-tests. ref #509

--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -102,6 +102,8 @@
         <module>../com.dynamo.cr.client.test</module>
         <module>../com.dynamo.cr.guieditor</module>
         <module>../com.dynamo.cr.guieditor.test</module>
+        <module>../com.dynamo.cr.properties</module>
+        <module>../com.dynamo.cr.properties.test</module>
         <module>../javax.media.opengl</module>
     </modules>
 
