--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -90,6 +90,7 @@
         <module>../com.dynamo.cr.scene.test</module>
         <module>../com.dynamo.cr.contenteditor</module>
         <module>../com.dynamo.cr.luaeditor</module>
+        <module>../com.dynamo.cr.luaeditor.test</module>
         <module>../com.dynamo.cr.cgeditor</module>
         <module>../com.dynamo.cr.ddfeditor</module>
         <module>../com.dynamo.cr.ddfeditor.test</module>
