Changed collectionEditorActive to check that activeEditor is instanceof CollectionEditor ref #530 * We used to check activeContext but it didn't work.

--- a/com.dynamo.cr.contenteditor/plugin.xml
+++ b/com.dynamo.cr.contenteditor/plugin.xml
@@ -595,14 +595,10 @@
       <definition
             id="com.dynamo.cr.contenteditor.definitions.collectionEditorActive">
          <with
-               variable="activeContexts">
-            <iterate
-                  ifEmpty="false"
-                  operator="or">
-               <equals
-                     value="com.dynamo.cr.contenteditor.contexts.collectioneditor">
-               </equals>
-            </iterate>
+               variable="activeEditor">
+            <instanceof
+                  value="com.dynamo.cr.contenteditor.editors.CollectionEditor">
+            </instanceof>
          </with>
       </definition>
    </extension>
