--- a/com.dynamo.cr.web2/.settings/org.eclipse.core.resources.prefs
+++ b/com.dynamo.cr.web2/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Sun Jul 03 18:58:44 CEST 2011
+#Mon Jul 04 00:55:52 CEST 2011
 eclipse.preferences.version=1
 encoding//src/com/dynamo/cr/web2/client/MessageNotification.ui.xml=UTF-8
 encoding//src/com/dynamo/cr/web2/client/ui/LoginView.ui.xml=UTF-8
+encoding//src/com/dynamo/cr/web2/client/ui/NewProjectView.ui.xml=UTF-8
 encoding//src/com/dynamo/cr/web2/client/ui/ProductInfoView.ui.xml=UTF-8
