OpenID authentication support in cr-server ref #566 * Custom HTTP-status code support in ServerException and ServerExceptionMapper * Add new table NewUser for pending user registration * Initial support for slf4j logging support * Added RollbackExceptionMapper * Misc changes

--- a/com.dynamo.cr.server/.classpath
+++ b/com.dynamo.cr.server/.classpath
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="ext/grizzly-servlet-webserver-1.9.18-k.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/logback-classic-0.9.29.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/logback-core-0.9.29.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/slf4j-api-1.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/commons-codec-1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/grizzly-servlet-webserver-1.9.18-k.jar" sourcepath="/Users/chmu/Downloads/grizzly-servlet-webserver-1.9.18-k-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jetty-all-7.0.2.v20100331.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/postgresql-9.0-801.jdbc4.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/derby.jar"/>
