--- a/com.dynamo.cr.server/build.properties
+++ b/com.dynamo.cr.server/build.properties
@@ -15,4 +15,9 @@ bin.includes = META-INF/,\
                ext/derby.jar,\
                ext/postgresql-9.0-801.jdbc4.jar,\
                ext/jetty-all-7.0.2.v20100331.jar,\
-               ext/grizzly-servlet-webserver-1.9.18-k.jar
+               ext/grizzly-servlet-webserver-1.9.18-k.jar,\
+               ext/commons-codec-1.5.jar,\
+               ext/logback-classic-0.9.29.jar,\
+               ext/logback-core-0.9.29.jar,\
+               ext/slf4j-api-1.6.1.jar,\
+               src/logback.xml
