--- a/com.dynamo.cr.server/config/chmu.config
+++ b/com.dynamo.cr.server/config/chmu.config
@@ -27,7 +27,7 @@ exe_command: {
 }
 
 project_templates {
-    id: "demos"
-    path: "/Users/chmu/Projects/dynamo/demos"
-    description: "Cool dynamo demos"
+    id: "bounce"
+    path: "/Users/chmu/Projects/dynamo/bounce"
+    description: "Bounce THE Game"
 }
