--- a/com.dynamo.cr.editor/build.properties
+++ b/com.dynamo.cr.editor/build.properties
@@ -4,5 +4,6 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                splash.bmp,\
-               plugin_customization.ini
+               plugin_customization.ini,\
+               lib/jetty-all-7.0.2.v20100331.jar
 source.. = src/
