Initial server logging ref #586 * Logback and slf4j * Removed old logger in Activator * private static Logger logger in all classes that logs * Initial configuration  - server.log  - access.log and access.xml  - All with rolling filters * Changed all e.printStackTrace() to logginer.err(...)

--- a/com.dynamo.cr.server/.classpath
+++ b/com.dynamo.cr.server/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="ext/janino.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/logback-classic-0.9.29.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/logback-core-0.9.29.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/slf4j-api-1.6.1.jar"/>
