--- a/com.dynamo.cr.server/build.properties
+++ b/com.dynamo.cr.server/build.properties
@@ -20,4 +20,5 @@ bin.includes = META-INF/,\
                ext/logback-classic-0.9.29.jar,\
                ext/logback-core-0.9.29.jar,\
                ext/slf4j-api-1.6.1.jar,\
-               src/logback.xml
+               src/logback.xml,\
+               ext/janino.jar
