Added role "owner", fixed authorization in cr protocol, complemented tests. fix #584
Other changes:
* Only owners can add members to projects, the new member is connected to the owner (not also the other way around, as before)
* Only owners can remove other users from projects, but not him/herself
* Only non-owners can remove themselves from projects

--- a/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -6,6 +6,12 @@ persistence_unit_name: "unit-test"
 repository_root: "tmp/test_data"
 progress_re: "\\[(\\d+)/(\\d+)\\]"
 
+applications: {
+  platform: "linux"
+  name: "fake_engine"
+  path: "test_data/fake_engine"
+}
+
 configure_command: {
   args: "waf"
   args: "configure"
