All resources must be on absolute form, ie start with '/' ref #590 * Updated code and content * Removed "invalid" (resource)=true for non-leaf nodes

--- a/engine/src/test/test.project
+++ b/engine/src/test/test.project
@@ -1,9 +1,9 @@
 [project]
 title = test
 [bootstrap]
-main_collection = main.collectionc
+main_collection = /main.collectionc
 [input]
-gamepads = default.gamepadsc
-game_binding = default.input_bindingc
+gamepads = /default.gamepadsc
+game_binding = /default.input_bindingc
 [resource]
 uri = build/default/src/test
