Jersey 1.8 upgrade and clean-up ref #585 * Removed jsonp-support. The NullPointerException was probably related to jsonp-filter added to the adapter. Incorrect way to add filters? * The NullPointerException-bug was caught in a new stress-test * Removed racy caching in MessageBodyWriter for protobuf and json. Error was caught in new stress test * Upgraded to jersey 1.8

--- a/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr.common/build.properties
@@ -2,10 +2,8 @@ source.. = src/,generated/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               ext/jersey-client-1.3.jar,\
                DYNAMO_HOME/ext/share/java/protobuf-java-2.3.0.jar,\
                ext/jsr311-api-1.1.1.jar,\
-               ext/jersey-core-1.3.jar,\
                ext/httpcore-4.0.1.jar,\
                ext/httpclient-4.0.1.jar,\
                DYNAMO_HOME/share/java/ddf.jar,\
@@ -19,4 +17,6 @@ bin.includes = META-INF/,\
                ext/jackson-mapper-asl-1.7.1.jar,\
                ext/commons-io-2.0.1.jar,\
                DYNAMO_HOME/share/java/fontc.jar,\
-               ext/vecmath.jar
+               ext/vecmath.jar,\
+               ext/jersey-client-1.8.jar,\
+               ext/jersey-core-1.8.jar
