--- a/com.dynamo.cr.server/build.properties
+++ b/com.dynamo.cr.server/build.properties
@@ -4,9 +4,6 @@ bin.includes = META-INF/,\
                .,\
                ext/asm-3.1.jar,\
                ext/jersey-client-1.3-sources.jar,\
-               ext/jersey-client-1.3.jar,\
-               ext/jersey-core-1.3.jar,\
-               ext/jersey-server-1.3.jar,\
                ext/jsr250-api-1.0.jar,\
                ext/jsr311-api-1.1.1.jar,\
                plugin.xml,\
@@ -15,10 +12,14 @@ bin.includes = META-INF/,\
                ext/derby.jar,\
                ext/postgresql-9.0-801.jdbc4.jar,\
                ext/jetty-all-7.0.2.v20100331.jar,\
-               ext/grizzly-servlet-webserver-1.9.18-k.jar,\
                ext/commons-codec-1.5.jar,\
                ext/logback-classic-0.9.29.jar,\
                ext/logback-core-0.9.29.jar,\
                ext/slf4j-api-1.6.1.jar,\
                src/logback.xml,\
-               ext/janino.jar
+               ext/janino.jar,\
+               ext/jersey-client-1.8.jar,\
+               ext/jersey-core-1.8.jar,\
+               ext/jersey-server-1.8.jar,\
+               ext/grizzly-servlet-webserver-1.9.18-i.jar,\
+               ext/jersey-grizzly-1.8.jar
