Improved server-side build management ref #592 * Cleanup old builds * Added unit-tests * Cancel-build support. HTTP DELETE on resource in REST-protocol * Prohibit concurrent builds * Added cancel build in editor, ie cancel on server when the build is client-side cancelled * Added support for cwd in build_command etc in cr-server config file * Fixed some legacy logging

--- a/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -13,16 +13,18 @@ applications: {
 }
 
 configure_command: {
-  args: "waf"
+  args: "{cwd}/scripts/configure.sh"
   args: "configure"
 }
 
 build_command: {
-  args: "waf"
+  args: "{cwd}/tmp/build.sh"
 }
 
 rebuild_command: {
-  args: "waf" args: "clean" args: "build"
+  args: "{cwd}/tmp/build.sh"
+  args: "clean"
+  args: "build"
 }
 
 exe_command {}
