Initial reference documentation "system" ref #575 * Simple presentation of json-based script-doc files * Changed to explit inclusion of css-theme, eg clean.css. This is required in order to be able to override theme definitions * Made center-part of main-layout scrollable * Some general css improvments

--- a/com.dynamo.cr.web2/.project
+++ b/com.dynamo.cr.web2/.project
@@ -6,6 +6,16 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
+			<triggers>auto,full,incremental,</triggers>
+			<arguments>
+				<dictionary>
+					<key>LaunchConfigHandle</key>
+					<value>&lt;project&gt;/.externalToolBuilders/Copy docs.launch</value>
+				</dictionary>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.python.pydev.PyDevBuilder</name>
 			<arguments>
 			</arguments>
