--- a/editor.properties
+++ b/editor.properties
@@ -9,7 +9,7 @@ topLevelElementType = foobar
 #The id of the top level element we are building
 #topLevelElementId = com.dynamo.cr.editor
 
-launcherName=Eclipse
+launcherName=Defold
 
 
 ############# PRODUCT/PACKAGING CONTROL #############
@@ -17,7 +17,7 @@ product=com.dynamo.cr.editor/cr.product
 runPackager=true
 
 # The prefix that will be used in the generated archive.
-archivePrefix=Editor
+archivePrefix=Defold
 
 # The location underwhich all of the build output will be collected.
 collectingFolder=${archivePrefix}
@@ -98,7 +98,7 @@ buildDirectory=/tmp/pde_build
 buildType=I
 
 # ID of the build.  Used in naming the build output.
-buildId=Editor
+buildId=Defold
 
 # Label for the build.  Used in naming the build output
 buildLabel=${buildType}.${buildId}
