--- a/com.dynamo.cr.ddfeditor/plugin.xml
+++ b/com.dynamo.cr.ddfeditor/plugin.xml
@@ -618,5 +618,100 @@
          </newWizardShortcut>
       </perspectiveExtension>
    </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="com.dynamo.cr.ddfeditor.commands.AddResourceComponent"
+            commandId="com.dynamo.cr.ddfeditor.commands.addResourceComponent">
+         <enabledWhen>
+            <reference
+                  definitionId="com.dynamo.cr.ddfeditor.definitions.gameObjectEditorActive">
+            </reference>
+         </enabledWhen>
+      </handler>
+      <handler
+            class="com.dynamo.cr.ddfeditor.commands.AddEmbeddedComponent"
+            commandId="com.dynamo.cr.ddfeditor.commands.addEmbeddedComponent">
+         <enabledWhen>
+            <reference
+                  definitionId="com.dynamo.cr.ddfeditor.definitions.gameObjectEditorActive">
+            </reference>
+         </enabledWhen>
+      </handler>
+      <handler
+            class="com.dynamo.cr.ddfeditor.commands.RemoveComponent"
+            commandId="com.dynamo.cr.ddfeditor.commands.removeComponent">
+         <enabledWhen>
+            <reference
+                  definitionId="com.dynamo.cr.ddfeditor.definitions.gameObjectEditorActive">
+            </reference>
+         </enabledWhen>
+      </handler>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            categoryId="com.dynamo.crepo.category"
+            description="Add Component From Resource"
+            id="com.dynamo.cr.ddfeditor.commands.addResourceComponent"
+            name="Add Component From Resource">
+      </command>
+      <command
+            categoryId="com.dynamo.crepo.category"
+            description="Add Embedded Component"
+            id="com.dynamo.cr.ddfeditor.commands.addEmbeddedComponent"
+            name="Add Embedded Component">
+      </command>
+      <command
+            categoryId="com.dynamo.crepo.category"
+            description="Remove Component"
+            id="com.dynamo.cr.ddfeditor.commands.removeComponent"
+            name="Remove Component">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="menu:com.dynamo.cr.editor.menus.tools?after=com.dynamo.cr.editor.menus.launch">
+         <menu
+               label="Game Object">
+            <command
+                  commandId="com.dynamo.cr.ddfeditor.commands.addResourceComponent"
+                  icon="icons/link_add.png"
+                  label="Add Component From Resource"
+                  style="push">
+            </command>
+            <command
+                  commandId="com.dynamo.cr.ddfeditor.commands.addEmbeddedComponent"
+                  icon="icons/link_add.png"
+                  label="Add Embedded Component"
+                  style="push">
+            </command>
+            <command
+                  commandId="com.dynamo.cr.ddfeditor.commands.removeComponent"
+                  icon="icons/page_delete.png"
+                  label="Remove Component"
+                  style="push">
+            </command>
+         </menu>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.core.expressions.definitions">
+      <definition
+            id="com.dynamo.cr.ddfeditor.definitions.gameObjectEditorActive">
+         <with
+               variable="activeContexts">
+            <iterate
+                  ifEmpty="false"
+                  operator="or">
+               <equals
+                     value="com.dynamo.cr.ddfeditor.contexts.gameobjecteditor">
+               </equals>
+            </iterate>
+         </with>
+      </definition>
+   </extension>
 
 </plugin>
