Added .jpa.osgi as a bundle.

--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -9,9 +9,9 @@
 
     <repositories>
         <repository>
-            <id>helios</id>
+            <id>indigo</id>
             <layout>p2</layout>
-            <url>http://download.eclipse.org/releases/helios</url>
+            <url>http://download.eclipse.org/releases/indigo</url>
         </repository>
 
         <!--
