PDE build-system fixes for 3.7 * Changed version numbers for equinox and pde-builder * Set pluginPath to ${baseLocation}/deltapack, ie the location of the delta-pack

--- a/editor.properties
+++ b/editor.properties
@@ -136,7 +136,7 @@ filteredDependencyCheck=false
 #- the location of the jar or folder that is the plugin or feature : /path/to/foo.jar or /path/to/foo
 #- a directory that contains a /plugins or /features subdirectory
 #- the location of a feature.xml, or for 2.1 style plugins, the plugin.xml or fragment.xml
-#pluginPath=
+pluginPath=${baseLocation}/deltapack
 
 skipBase=true
 eclipseURL=<url for eclipse download site>
