Added '/' to the id of root collections, so former global id "foo/bar" is now "/foo/bar". fix #553

--- a/engine/src/test/test.project
+++ b/engine/src/test/test.project
@@ -7,3 +7,5 @@ gamepads = /default.gamepadsc
 game_binding = /default.input_bindingc
 [resource]
 uri = build/default/src/test
+[physics]
+world_count = 6
