Image convex cull fitter ref #669 * k-DOP style method. ** Fit N planes to the images ** Clip ** Removed duplicates

--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -104,6 +104,8 @@
         <module>../com.dynamo.cr.client.test</module>
         <module>../com.dynamo.cr.guieditor</module>
         <module>../com.dynamo.cr.guieditor.test</module>
+        <module>../com.dynamo.cr.tileeditor</module>
+        <module>../com.dynamo.cr.tileeditor.test</module>
         <module>../com.dynamo.cr.properties</module>
         <module>../com.dynamo.cr.properties.test</module>
         <module>../javax.media.opengl</module>
