Fixed so tile sets appear under new in the proj explorer context menu. ref #671

--- a/com.dynamo.cr.tileeditor/plugin.xml
+++ b/com.dynamo.cr.tileeditor/plugin.xml
@@ -47,5 +47,13 @@
          </newWizardShortcut>
       </perspectiveExtension>
    </extension>
+   <extension
+         point="org.eclipse.ui.navigator.navigatorContent">
+      <commonWizard
+            type="new"
+            wizardId="com.dynamo.cr.tileeditor.wizards.TileSetNewWizard">
+         <enablement></enablement>
+      </commonWizard>
+   </extension>
 
 </plugin>
