First version of the outline view. ref #671

--- a/com.dynamo.cr.tileeditor/plugin.xml
+++ b/com.dynamo.cr.tileeditor/plugin.xml
@@ -55,5 +55,12 @@
          <enablement></enablement>
       </commonWizard>
    </extension>
+   <extension
+         point="org.eclipse.ui.contexts">
+      <context
+            id="com.dynamo.cr.tileseteditor.contexts.TileSetEditor"
+            name="Tile Set Editor">
+      </context>
+   </extension>
 
 </plugin>
