--- a/com.dynamo.cr.tileeditor/plugin.xml
+++ b/com.dynamo.cr.tileeditor/plugin.xml
@@ -5,6 +5,7 @@
          point="org.eclipse.ui.editors">
       <editor
             class="com.dynamo.cr.tileeditor.TileSetEditor"
+            contributorClass="com.dynamo.cr.tileeditor.TileSetEditorActionBarContributor"
             default="false"
             extensions="tileset"
             icon="icons/small_tiles.png"
